feito add e select dos users

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -152,7 +152,7 @@
                                                     [src]="hospitalPhoto || '../../../assets/icons/filamed-icon-azul.png'" />
                                             </ion-thumbnail>
                                             <div class="informacoes-div">
-                                                <h1>{{nomeHospital || 'Hospital Preview'}}</h1>
+                                                <h1>{{nomeHospital || 'UPA Exemplo'}}</h1>
                                                 <p>
                                                     <ion-icon class="icon-text" name="locate"></ion-icon>&nbsp;
                                                     <span>Lat: {{tempLatitude | number: '1.4-4'}}</span>
