--- a/src/app/sistema-login/alteracao-senha/alteracao-senha.page.html
+++ b/src/app/sistema-login/alteracao-senha/alteracao-senha.page.html
@@ -107,8 +107,8 @@
 
 
         <div class="div-btEntrar">
-          <ion-button id="btRecuperacao">
-            Enviar e-mail de recuperação
+          <ion-button id="btRecuperacao" (click)="alterarSenha()">
+            Redefinir senha
           </ion-button>
         </div>
 
