--- a/src/app/sistema-login/esqueci-senha/esqueci-senha.page.html
+++ b/src/app/sistema-login/esqueci-senha/esqueci-senha.page.html
@@ -63,7 +63,7 @@
 
         
         <div class="div-btEntrar">
-          <ion-button id="btRecuperacao">
+          <ion-button id="btRecuperacao" (click)="enviarRecSenha()">
             Enviar e-mail de recuperação
           </ion-button>
         </div>
