--- a/src/app/pages/usuarios/usuarios.page.html
+++ b/src/app/pages/usuarios/usuarios.page.html
@@ -24,9 +24,12 @@
 
 
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end" 
-  *ngIf="is_master_admin === '1' && !isEditingMode && !isDeletingMode">
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end"
+    *ngIf="is_master_admin === '1' && !isEditingMode && !isDeletingMode">
     <ion-fab-button>
       <ion-icon name="chevron-up"></ion-icon>
     </ion-fab-button>
@@ -47,12 +50,7 @@
   </ion-fab>
 
   <ion-grid>
-    <ion-row *ngIf="carregando">
-      <ion-col class="ion-text-center">
-        <ion-spinner name="crescent" color="primary"></ion-spinner>
-        <p>Carregando lista de usuários...</p>
-      </ion-col>
-    </ion-row>
+
 
     <ion-row *ngIf="erroCarregamento">
       <ion-col class="ion-text-center">
@@ -61,15 +59,20 @@
       </ion-col>
     </ion-row>
 
+    <div *ngIf="carregando" class="loading-container">
+        <ion-spinner></ion-spinner>
+        <p>Carregando hospitais próximos...</p>
+    </div>
+
     <ion-row>
       <ion-col>
         <p id="titulo-cards-home">Lista de usuários cadastrados:</p>
       </ion-col>
     </ion-row>
 
-    <ion-row>
+    <ion-row *ngIf="!carregando">
       <ion-col>
-        <div class="card-wrapper" *ngFor="let user of users" (click)="viewUserDetails(user)">
+        <div  class="card-wrapper" *ngFor="let user of users" (click)="viewUserDetails(user)">
 
 
 
@@ -167,7 +170,7 @@
                           <span>{{nomeCompleto || 'João da Silva'}}</span>
                         </p>
 
-                        
+
                       </div>
                     </ion-item>
                   </ion-list>
@@ -276,7 +279,7 @@
 
                 <div class="wave-group">
                   <input required="" [type]="'text'" class="input-tecido" [(ngModel)]="cpf" #inputCpfRef
-                    placeholder="Ex.: 000.000.000-00" mask="000.000.000-00" [dropSpecialCharacters]="false" >
+                    placeholder="Ex.: 000.000.000-00" mask="000.000.000-00" [dropSpecialCharacters]="false">
                   <label class="label">
                     <span class="label-char" style="--index: 0">C</span>
                     <span class="label-char" style="--index: 1">P</span>
@@ -681,42 +684,7 @@
             </div>
           </ion-col>
         </ion-row>
-        <ion-row>
-          <ion-col>
-            <div class="input-barra">
-              <div class="input-texto">
-                <div class="icon-search">
-                  <ion-buttons>
-                    <ion-button (click)="togglePasswordVisibility()">
-                      <ion-icon class="icon lock-icon"
-                        [name]="isPasswordVisible ? 'lock-open' : 'lock-closed'"></ion-icon>
-                    </ion-button>
-                  </ion-buttons>
-                </div>
-                <div class="wave-group">
-                  <input required="" [type]="isPasswordVisible ? 'text' : 'password'" class="input-tecido"
-                    [(ngModel)]="senha" #inputSenhaRef>
-                  <label class="label">
-                    <span class="label-char" style="--index: 0">S</span>
-                    <span class="label-char" style="--index: 1">e</span>
-                    <span class="label-char" style="--index: 2">n</span>
-                    <span class="label-char" style="--index: 3">h</span>
-                    <span class="label-char" style="--index: 5">a</span>
-                  </label>
-                </div>
-                <div class="icon-search">
-                  <ion-buttons>
-                    <ion-button *ngIf="senha" fill="clear" class="clear-button" [hidden]="!senha"
-                      (click)="limparInput('senha')">
-                      <ion-icon name="close"></ion-icon>
-                    </ion-button>
-                  </ion-buttons>
-                </div>
-              </div>
-              <span class="bar"></span>
-            </div>
-          </ion-col>
-        </ion-row>
+
         <ion-row>
           <ion-col>
             <div class="div-btSalvarConfig">
